--- a/vistas/login.html
+++ b/vistas/login.html
@@ -19,7 +19,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>MULTISERVICIOS KYG</b></a>
+    <a ><b>MULTISERVICIOS KYG</b></a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
