--- a/vistas/login.html
+++ b/vistas/login.html
@@ -19,11 +19,11 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>MULTISERVICIOS KYG</b></a>
+    <a ><b>MULTISERVICIOS KYG</b></a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-    <p class="login-box-msg">Ingresa tus datos de Acceso</p>
+    <p class="login-box-msg">Ingresa tu usuario y contraseña</p>
 
     <form  method="post" id="frmAcceso">
       <div class="form-group has-feedback">
